--- a/index.html
+++ b/index.html
@@ -1,2 +1,9 @@
-<script src="bundle.js">
-</script>
+<!doctype html>
+<html>
+<head>
+</head>
+<body>
+	<div id="a"></div>
+	<script src="bundle.js"> </script>
+</body>
+</html>
